fixed tab complete and added reply command